Удалены сущности покупателя и продавца, теперь у нас одна таблица Изменены некоторые методы на pageable Переделаны контроллеры, удалены лишние, добавлена валидация на уровне контроллеров